syntax = "proto3";

package object;

message Location {
    string database = 1;
    string collection = 2;
}

message Object {
    Location location = 1;
    string document = 2;
}

message CreateObjectRequest {
    Object object = 1;

}
message CreateObjectResponse {
    Object object = 1;
    string id = 2;
}

message ReadObjectRequest {
    Location location = 1;
    string filters = 3;
}
message ReadObjectResponse {
    Object object = 1;
}

message UpdateObjectRequest {
    Object object = 1;
}
message UpdateObjectResponse {
    Object object = 1;
    string id = 2;
}

message DeleteObjectRequest {
    Location location = 1;
    string filters = 2;
}

message DeleteObjectResponse {
    string id = 1;
}

message ListObjectRequest {
    Location location = 1;
    string filters = 2;
    //    int32 offset = 2;
    //    int32 limit = 3;
}

message ListObjectResponse {
    Object object = 1;
}


service MongoService {
    rpc CreateObject (CreateObjectRequest) returns (CreateObjectResponse) {};
    rpc ReadObject (ReadObjectRequest) returns (ReadObjectResponse) {};
    rpc UpdateObject (UpdateObjectRequest) returns (UpdateObjectResponse) {};
    rpc DeleteObject (DeleteObjectRequest) returns (DeleteObjectResponse) {};
    rpc ListObject (ListObjectRequest) returns (stream ListObjectResponse) {};
}